--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v5.8-Hyper)
+name: Apple Trailer Manzana (v5.9-Instant-Kill)
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ on:
           - 'Formal_Download'
         default: 'Probe_All_Details'
       custom_sequence:
-        description: '【正式下载填入】例如: 0\n13\nall\n4\nall\n2\n'
+        description: '【正式下载填入】序列示例: 0\n13\nall\n4\nall\n2\n'
         required: false
         default: ''
 
@@ -23,61 +23,57 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v5.8-Checkout
+      - name: v5.9-Checkout
         uses: actions/checkout@v4
 
-      - name: v5.8-Environment Setup
+      - name: v5.9-Environment Setup
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：超精拦截探测 (极致利落) ----------------
-      - name: v5.8-Hyper Probe
+      # ---------------- 模式 1：零延迟瞬杀探测 (极其利落) ----------------
+      - name: v5.9-Instant-Kill Probe
         if: github.event.inputs.action_type == 'Probe_All_Details'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 启动超前拦截探测 (拦截点: Fetching m3u8)..."
+          echo "🔍 启动瞬杀拦截探测 (目标: Fetching m3u8)..."
           
-          # 启动探测
+          # 1. 启动后台探测进程
           (printf "0\n13\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
           
-          # 监控逻辑：提前到 m3u8 阶段
-          for i in {1..60}; do
-            if grep -q "Fetching m3u8" ../raw_full.log; then
-              # 发现目标后微停 1 秒，确保最后的表格数据完全从内存写入磁盘
-              sleep 1
-              echo "✅ 检测到菜单已生成完毕，正在执行瞬杀..."
-              pkill -9 -f python 2>/dev/null || true
-              break
-            fi
-            sleep 1
-          done
+          # 2. 核心拦截器：监控日志，一旦命中关键字，立即强制斩断 Python 进程
+          # grep -m 1 匹配到第一次后就会退出，触发后面的 pkill -9
+          tail -f ../raw_full.log | grep -m 1 "Fetching m3u8" && pkill -9 -f python 2>/dev/null || true
           
-          # 日志清洗
+          echo "✅ 拦截已触发！进程已在分片抓取前被暴力终止。"
+          
+          # 3. 日志清洗与报告生成
           cd ..
           sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_ID_Report.txt
           
-          echo "=== 探测报告预览 (最终锁定 ID) ==="
-          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt | tail -n 25
+          echo "=== 探测报告末尾预览 ==="
+          tail -n 20 Full_ID_Report.txt
 
-      - name: v5.8-Upload ID Report
+      - name: v5.9-Upload ID Report
         if: github.event.inputs.action_type == 'Probe_All_Details'
         uses: actions/upload-artifact@v4
         with:
           name: Full_ID_Report
           path: Full_ID_Report.txt
 
-      # ---------------- 模式 2：正式下载 (跳过过程打印) ----------------
-      - name: v5.8-Execute Download
+      # ---------------- 模式 2：正式下载 ----------------
+      - name: v5.9-Execute Download
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🚀 启动下载，序列: ${{ github.event.inputs.custom_sequence }}"
+          echo "🚀 启动正式下载，自定义序列: "
+          echo "${{ github.event.inputs.custom_sequence }}"
+          # 正式执行，并过滤掉下载过程中的 Fetching 滚动条
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: v5.8-Final Extraction
+      - name: v5.9-Final Extraction
         if: always() && github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
@@ -86,9 +82,10 @@ jobs:
           fi
           find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \; 2>/dev/null || true
 
-      - name: v5.8-Upload Video
+      - name: v5.9-Upload Video
         if: always() && github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
           name: Apple_Video_Result
           path: final_delivery/*
+          retention-days: 7
