--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v5.6-Ultra)
+name: Apple Trailer Manzana (v5.6-Final)
 
 on:
   workflow_dispatch:
@@ -23,32 +23,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v5.6-Checkout
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: v5.6-Environment Setup
+      - name: Environment Setup
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：强力拦截探测 (无报错回滚版) ----------------
+      # ---------------- 模式 1：探测模式 (拦截 Fetching 信号) ----------------
       - name: v5.6-Precision Probe
         if: github.event.inputs.action_type == 'Probe_All_Details'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 正在进行诱导探测 (Range=0, Stream=13, Others=all)..."
+          echo "🔍 正在启动混合诱导探测..."
           
-          # 启动探测
+          # 启动后台进程
           (printf "0\n13\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
           
-          # 强力监控
+          # 监控逻辑：检测到 Fetching segments 即刻强行熔断
           for i in {1..60}; do
             if grep -q "Fetching segments" ../raw_full.log; then
-              echo "✅ 已捕获 80+ ID 菜单！正在执行瞬杀拦截..."
-              # 使用 pkill 保证断流干净，同时静默报错
-              pkill -9 -f python 2>/dev/null || true
+              echo "✅ 已捕获全量 ID 菜单！正在拦截..."
+              pkill -f python
               break
             fi
             sleep 1
@@ -58,25 +57,26 @@ jobs:
           cd ..
           sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_ID_Report.txt
           
-          echo "=== 探测报告预览 (表格底部) ==="
+          echo "=== 探测报告预览 ==="
           grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt | tail -n 25
 
-      - name: v5.6-Upload ID Report
+      - name: Upload ID Report
         if: github.event.inputs.action_type == 'Probe_All_Details'
         uses: actions/upload-artifact@v4
         with:
           name: Full_ID_Report
           path: Full_ID_Report.txt
 
-      # ---------------- 模式 2：正式下载 ----------------
+      # ---------------- 模式 2：正式下载模式 ----------------
       - name: v5.6-Execute Download
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🚀 执行下载序列: ${{ github.event.inputs.custom_sequence }}"
+          echo "🚀 启动正式下载，序列: ${{ github.event.inputs.custom_sequence }}"
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
       - name: v5.6-Extraction
+        if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
           if [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ]; then
@@ -84,8 +84,10 @@ jobs:
           fi
           find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \; 2>/dev/null || true
 
-      - name: v5.6-Upload Result
+      - name: Upload Video
+        if: github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Video_Result
+          name: Apple_Video_Final
           path: final_delivery/*
+          retention-days: 7
