--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -14,7 +14,7 @@ on:
           - 'Formal_Download'
         default: 'Probe_All_Details'
       custom_sequence:
-        description: '【正式下载填入】序列示例: 1\n11\n0\n0\n0\n2\n'
+        description: '【正式下载填入】序列示例: 0\n11\nall\nall\n0\n2\n'
         required: false
         default: ''
 
@@ -66,6 +66,7 @@ jobs:
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
           echo "🚀 启动正式下载，序列: ${{ github.event.inputs.custom_sequence }}"
+          # 使用 printf 处理转义字符并传递给 python
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
       - name: v5.6-Extraction
@@ -77,7 +78,7 @@ jobs:
           fi
           find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \; 2>/dev/null || true
 
-      # ---------------- 新增步骤：FFmpeg 自动信息查询 ----------------
+      # ---------------- 修正后的 FFmpeg 自动信息查询 ----------------
       - name: v5.6-Media-Inspect
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
@@ -86,8 +87,11 @@ jobs:
             if [[ "$file" == *.mp4 || "$file" == *.mkv ]]; then
               echo "------------------------------------------------"
               echo "🎬 文件名: $(basename "$file")"
-              # ffprobe 查询流的编码、分辨率、语言等核心信息
-              ffprobe -v error -show_entries format=size,duration,bit_rate : stream=codec_name,codec_type,bit_rate,width,height,display_aspect_ratio : stream_tags=language,title -of default=noprint_wrappers=1 "$file"
+              # 修正了参数格式，使用逗号分隔 entries，并确保引号正确
+              ffprobe -v error \
+                -show_entries "format=size,bit_rate:stream=codec_name,codec_type,width,height,display_aspect_ratio:stream_tags=language,title" \
+                -of default=noprint_wrappers=1 \
+                "$file"
               echo "------------------------------------------------"
             fi
           done
