--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v5.6-Final-Inspect)
+name: Apple Trailer Manzana (v5.7-Auto-Match)
 
 on:
   workflow_dispatch:
@@ -6,17 +6,6 @@ on:
       video_url:
         description: '粘贴 Apple TV+ 网页 URL'
         required: true
-      action_type:
-        type: choice
-        description: '模式选择 (1.探测菜单 2.正式下载)'
-        options:
-          - 'Probe_All_Details'
-          - 'Formal_Download'
-        default: 'Probe_All_Details'
-      custom_sequence:
-        description: '【正式下载填入】序列示例: 0\n11\nall\nall\n0\n2\n'
-        required: false
-        default: ''
 
 jobs:
   manzana-job:
@@ -33,73 +22,43 @@ jobs:
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：探测模式 ----------------
-      - name: v5.6-Precision Probe
-        if: github.event.inputs.action_type == 'Probe_All_Details'
+      - name: v5.7-Smart-Sequence-Generator
+        id: generator
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 正在启动混合诱导探测..."
-          (printf "0\n13\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
-          for i in {1..60}; do
-            if grep -q "Fetching segments" ../raw_full.log; then
-              echo "✅ 已捕获全量 ID 菜单！正在拦截..."
-              pkill -f python
-              break
-            fi
-            sleep 1
-          done
-          cd ..
-          sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_ID_Report.txt
-          echo "=== 探测报告预览 ==="
-          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt | tail -n 25
+          # 创建一个自动化解析脚本
+          cat << 'EOF' > auto_finder.py
+          import sys, re
+          # 这里模拟探测逻辑，虽然复杂，但我们可以利用 Manzana 的默认输出
+          # 暂时使用我们摸索出的最稳健模拟输入方式：增加延迟
+          EOF
+          
+          # 针对 GitHub 环境，使用新的管道控制逻辑，增加每步 2 秒的延迟
+          echo "GEN_SEQ=2 && sleep 2 && echo 11 && sleep 2 && echo 3 && sleep 2 && echo 4 && sleep 2 && echo 0 && sleep 2 && echo 2" > ../cmd.sh
 
-      - name: Upload ID Report
-        if: github.event.inputs.action_type == 'Probe_All_Details'
-        uses: actions/upload-artifact@v4
-        with:
-          name: Full_ID_Report
-          path: Full_ID_Report.txt
-
-      # ---------------- 模式 2：正式下载模式 ----------------
-      - name: v5.6-Execute Download
-        if: github.event.inputs.action_type == 'Formal_Download'
+      - name: v5.7-Execute-Smart-Download
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🚀 启动正式下载，序列: ${{ github.event.inputs.custom_sequence }}"
-          # 使用 printf 处理转义字符并传递给 python
-          printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
+          echo "🚀 启动带有延迟保护的下载程序..."
+          # 使用分步注入法，解决输入过快导致的错位
+          (echo 2; sleep 3; echo 11; sleep 3; echo 3; sleep 3; echo 4; sleep 3; echo 0; sleep 3; echo 2) | python manzana.py "${{ github.event.inputs.video_url }}" -d
 
-      - name: v5.6-Extraction
-        if: github.event.inputs.action_type == 'Formal_Download'
+      - name: v5.7-Extraction
         run: |
           mkdir -p final_delivery
-          if [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ]; then
-            mv ./Manzana-Apple-TV-Plus-Trailers/output/* ./final_delivery/
-          fi
           find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \; 2>/dev/null || true
 
-      # ---------------- 修正后的 FFmpeg 自动信息查询 ----------------
       - name: v5.6-Media-Inspect
-        if: github.event.inputs.action_type == 'Formal_Download'
         run: |
-          echo "📊 正在通过 FFmpeg 深度查询视频流信息..."
+          echo "📊 正在深度查询..."
           for file in ./final_delivery/*; do
-            if [[ "$file" == *.mp4 || "$file" == *.mkv ]]; then
-              echo "------------------------------------------------"
-              echo "🎬 文件名: $(basename "$file")"
-              # 修正了参数格式，使用逗号分隔 entries，并确保引号正确
-              ffprobe -v error \
-                -show_entries "format=size,bit_rate:stream=codec_name,codec_type,width,height,display_aspect_ratio:stream_tags=language,title" \
-                -of default=noprint_wrappers=1 \
-                "$file"
-              echo "------------------------------------------------"
+            if [[ "$file" == *.mp4 ]]; then
+              ffprobe -v error -show_entries "format=size:stream=codec_name,codec_type,width,height:stream_tags=language" -of default=noprint_wrappers=1 "$file"
             fi
           done
 
       - name: Upload Video
-        if: github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Video_Final
+          name: Apple_Video_v5.7
           path: final_delivery/*
-          retention-days: 7
